Addressed multiple sonarqube issues