@@ -18,7 +18,6 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Service class for User, defined by the {@link Service} annotation.
@@ -274,7 +273,7 @@ public class UserService {
                 .map(UserInteraction::getItemId)
                 .map(this::getUserById)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
